# rust-chat

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
