[package]
name = "rust-chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = "0.1.12"
bytes = "1"
futures = { version = "0.3.0", features = ["thread-pool"]}
